@@ -13,6 +13,10 @@
         <maven.compiler.target>11</maven.compiler.target>
         <junit.jupiter.version>5.10.0</junit.jupiter.version> <!-- Версия JUnit 5 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!-- версия Allure -->
+        <allure.version>2.17.3</allure.version>
+        <aspectj.version>1.9.7</aspectj.version>
     </properties>
 
     <dependencies>
@@ -57,24 +61,57 @@
             <version>1.4.11</version> <!-- Укажи актуальную версию -->
         </dependency>
 
+        <!--<dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-junit5</artifactId>
+            <version>2.10.0</version>--> <!-- Проверьте последнюю версию на https://mvnrepository.com -->
+            <!--<scope>test</scope>
+        </dependency>-->
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit5</artifactId>
-            <version>2.10.0</version> <!-- Проверьте последнюю версию на https://mvnrepository.com -->
-            <scope>test</scope>
+            <version>${allure.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <!-- Плагин Surefire для запуска тестов с JUnit 5 -->
             <plugin>
+                <!-- настройка плагина maven-surefire-plugin -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M9</version>
+                <version>2.22.2</version>
                 <configuration>
-                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    <testFailureIgnore>false</testFailureIgnore>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
+                    <properties>
+                        <property>
+                            <name>listener</name>
+                            <value>io.qameta.allure.junit5.AllureJunit5</value>
+                        </property>
+                    </properties>
+                    <systemProperties>
+                        <property>
+                            <!-- папка, в которую будут генерироваться отчёты Allure -->
+                            <name>allure.results.directory</name>
+                            <value>${project.build.directory}/allure-results</value>
+                        </property>
+                    </systemProperties>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
             <!-- Для формирования отчетов Allure-->
@@ -83,10 +120,9 @@
                 <artifactId>allure-maven</artifactId>
                 <version>2.10.0</version> <!-- Проверьте последнюю версию -->
                 <configuration>
-                    <!--<resultsDirectory>${project.basedir}/allure-results</resultsDirectory>-->
-                    <resultsDirectory>allure-results</resultsDirectory> <!--Где хранится папка с отчетом-->
+                    <!--<resultsDirectory>allure-results</resultsDirectory>--> <!--Где хранится папка с отчетом-->
                     <!--mvn clean test -Dallure.results.directory=target/allure-results--> <!--Комманда для принудительного отчета в папку таргет-->
-                    <reportVersion>2.10.0</reportVersion>
+                    <reportVersion>2.15.0</reportVersion>
                </configuration>
            </plugin>
 
